--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -96,11 +96,15 @@
     font-size: 30px;
 }
 
-#daisiesBottomRight{
+#homeDaisiesBottom{
     width: 50%;
+    height: auto;
     opacity: 0.6;
 }
 
 #whiteRabbit{
+    position: absolute;
+    z-index: 0;
     width: 25%;
+    height: auto;
 }
